--- a/app.css
+++ b/app.css
@@ -1,7 +1,96 @@
-body{
-    background-color:grey;
+.shooter
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle at center, #7f8c8d, #2c3e50);
 }
-h1{
-    color: azure;
-    font-family: 'Times New Roman', Times, serif;
+.shooter .start
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: 80px;
+    text-transform: uppercase;
+    opacity: 0.15;
+    cursor: pointer;
+    display: none;
+}
+.shooter .score
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    text-transform: uppercase;
+    opacity: 0.15;
+}
+.shooter .score .value
+{
+    font-size: 120px;
+}
+.shooter .score .unit
+{
+    font-size: 30px;
+    text-transform: uppercase;
+}
+.shooter .timer
+{
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    text-transform: uppercase;
+    opacity: 0.15;
+    font-size: 30px;
+}
+.shooter .targets
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.shooter .targets .target
+{
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 12vmin;
+    height: 12vmin;
+    margin-left: -6vmin;
+    margin-top: -6vmin;
+    background: #dddddd;
+    border-radius: 50%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.55);
+}
+.shooter .targets .target:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% / 3 * 2);
+    height: calc(100% / 3 * 2);
+    background: #2980b9;
+    border-radius: 50%;
+}
+.shooter .targets .target:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 4vmin;
+    height: 4vmin;
+    background: #dddddd;
+    border-radius: 50%;
 }
