--- a/app.css
+++ b/app.css
@@ -6,6 +6,7 @@
     width: 100vw;
     height: 100vh;
     background: radial-gradient(circle at center, #7f8c8d, #2c3e50);
+    overflow: hidden;
 }
 .shooter .start
 {
