--- a/app.css
+++ b/app.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(to right, #457fca, #5691c8);
     overflow: hidden;
 }
 .shooter .start
@@ -62,6 +62,19 @@
     width: 100%;
     height: 100%;
 }
+.shooter .best-score
+{
+    display: none;
+    position: absolute;
+    bottom: 25%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    color: #ffffff;
+    text-transform: uppercase;
+    opacity: 0.15;
+    font-size: 30px;
+    
+}
 
 .shooter .targets .target
 {
@@ -100,11 +113,13 @@
 }
 
 .shooter.step-start .start,
+.shooter.step-start .best-score,
 .shooter.step-game .score,
 .shooter.step-game .timer,
 .shooter.step-game .targets,
 .shooter.step-end .start,
-.shooter.step-end .score
+.shooter.step-end .score,
+.shooter.step-end .best-score
 {
     display: block;
 }
